# bcp2-mapf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
bcp/: main.cpp
bcp/bbtree/: bbnode.h  bbtree.cpp  bbtree.h  brancher.h  length_brancher.cpp  length_brancher.h  negative_nodetime_brancher.cpp  negative_nodetime_brancher.h  node_selectors.cpp  node_selectors.h  nodetime_brancher.cpp  nodetime_brancher.h
bcp/constraints/: agent.cpp  agent.h  corridor_conflict.cpp  corridor_conflict.h  edgetime_conflict.cpp  edgetime_conflict.h  exit_entry_conflict.cpp  exit_entry_conflict.h  multi_agent_exit_entry_conflict.cpp  multi_agent_exit_entry_conflict.h  multi_agent_two_edge_conflict.cpp  multi_agent_two_edge_conflict.h  nodetime_conflict.cpp  nodetime_conflict.h  pseudo_corridor_conflict.cpp  pseudo_corridor_conflict.h  rectangle_clique_conflict.cpp  rectangle_clique_conflict.h  rectangle_knapsack_conflict.cpp  rectangle_knapsack_conflict.h  separator.h  target_conflict.cpp  target_conflict.h  two_edge_conflict.cpp  two_edge_conflict.h
bcp/heuristics/: heuristic.h  random_rounding.cpp  random_rounding.h  simple_rounding.cpp  simple_rounding.h
bcp/master/: constraint.h  constraint_pool.h  constraint_storage.cpp  constraint_storage.h  gurobi_lp.cpp  gurobi_lp.h  master.cpp  master.h  status.h  variable.h  variable_pool.h  variable_storage.cpp  variable_storage.h
bcp/output/: formatting.cpp  formatting.h
bcp/pricing/: directional_costs.h  distance_heuristic.cpp  distance_heuristic.h  edgetime_penalties.h  finish_time_penalties.h  independent_intervals.cpp  independent_intervals.h  independent_time_expanded_astar.cpp  independent_time_expanded_astar.h  independent_time_expanded_astar_pricer.cpp  independent_time_expanded_astar_pricer.h  independent_time_interval_astar.cpp  independent_time_interval_astar.h  independent_time_interval_astar_pricer.cpp  independent_time_interval_astar_pricer.h  interval.h  once_off_penalties.h  partial_pricing.cpp  partial_pricing.h  pricer.h  pricer_base.h  rectangle_penalties.h  shared_intervals.cpp  shared_intervals.h  shared_time_expanded_astar.cpp  shared_time_expanded_astar.h  shared_time_expanded_astar_pricer.cpp  shared_time_expanded_astar_pricer.h  shared_time_interval_astar.cpp  shared_time_interval_astar.h  shared_time_interval_astar_pricer.cpp  shared_time_interval_astar_pricer.h
bcp/problem/: debug.h  instance.cpp  instance.h  map.cpp  map.h  problem.cpp  problem.h  projection.cpp  projection.h  runtime_tests.cpp  runtime_tests.h  subroutine_set.h
bcp/types/: arena.cpp  arena.h  array.h  astar_priority_queue.h  basic_types.h  bitset.h  clock.h  dary_heap.h  debug.h  file_system.h  float_compare.h  hash_map.h  map_types.h  matrix.h  memory_pool.cpp  memory_pool.h  path.h  pointers.h  priority_queue.h  random.h  ranges.h  span.h  string.h  tracy.cpp  tracy.h  tuple.h  vector.h
instances/test/: empty.map  empty.scen  maze.map  maze.scen  rectangle.map  rectangle.scen  test.map  test1.scen  test2.scen
